--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -2,55 +2,32 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Macros\dllmain.cpp">
-      <Filter>Core</Filter>
-    </ClCompile>
-    <ClCompile Include="MoreEventsClass.cpp">
-      <Filter>Core</Filter>
-    </ClCompile>
-    <ClCompile Include="TestEvents.cpp">
-      <Filter>Core</Filter>
-    </ClCompile>
-    <ClCompile Include="PolScriptSushi.cpp">
-      <Filter>Core</Filter>
-    </ClCompile>
-    <ClCompile Include="Testanimator.cpp">
-      <Filter>Core</Filter>
+      <Filter>Macros</Filter>
     </ClCompile>
     <ClCompile Include="PlayerController.cpp">
-      <Filter>Core</Filter>
+      <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="PlayerTest.cpp" />
-    <ClCompile Include="ReverbZone.cpp" />
-    <ClCompile Include="TerrainSwitch.cpp" />
-    <ClCompile Include="TestSwitches.cpp" />
+    <ClCompile Include="ReverbZone.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
-      <Filter>Core</Filter>
-    </ClInclude>
-    <ClInclude Include="MoreEventsClass.h">
-      <Filter>Core</Filter>
-    </ClInclude>
-    <ClInclude Include="TestEvents.h">
-      <Filter>Core</Filter>
-    </ClInclude>
-    <ClInclude Include="PolScriptSushi.h">
-      <Filter>Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Testanimator.h">
-      <Filter>Core</Filter>
+      <Filter>Macros</Filter>
     </ClInclude>
     <ClInclude Include="PlayerController.h">
-      <Filter>Core</Filter>
+      <Filter>Scripts</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerTest.h" />
-    <ClInclude Include="ReverbZone.h" />
-    <ClInclude Include="TerrainSwitch.h" />
-    <ClInclude Include="TestSwitches.h" />
+    <ClInclude Include="ReverbZone.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Core">
+    <Filter Include="Macros">
       <UniqueIdentifier>{c382f096-597d-453a-8b6b-a3f46765afe4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts">
+      <UniqueIdentifier>{da5580d2-8e32-4ec3-80d2-0137b7717a60}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
