Creation of attack class

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -10,7 +10,7 @@
     <ClCompile Include="PlayerController.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="PlayerAttack.cpp">
+    <ClCompile Include="PlayerAttacks.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
   </ItemGroup>
@@ -24,7 +24,7 @@
     <ClInclude Include="PlayerController.h">
       <Filter>Scripts</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerAttack.h">
+    <ClInclude Include="PlayerAttacks.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
