--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="PlayerController.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="UI_Char_Frame.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -19,6 +22,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="PlayerController.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="UI_Char_Frame.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
