--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="TriggerCamera.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="CameraEnterExit.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -37,6 +40,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="TriggerCamera.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraEnterExit.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
