--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -171,6 +171,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="PlayerTest.h" />
     <ClInclude Include="ReverbZone.h" />
@@ -179,6 +180,7 @@
     <ClInclude Include="TriggerCamera.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="PlayerTest.cpp" />
     <ClCompile Include="ReverbZone.cpp" />
