fixing bug player jumping more while moving down

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="CameraEnterExit.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerControllerTest.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -43,6 +46,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="CameraEnterExit.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerControllerTest.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
