--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -13,6 +13,9 @@
     <ClCompile Include="UI_Char_Frame.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="UltiBar.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -25,6 +28,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="UI_Char_Frame.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="UltiBar.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
