Prefabs Camera triggered and PlayerCollider prebab changed

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -1,69 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Macros\dllmain.cpp">
-      <Filter>Macros</Filter>
-    </ClCompile>
-    <ClCompile Include="ReverbZone.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerController.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraMovement.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerTest.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerCamera.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraEnterExit.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerControllerTest.cpp">
-          <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerAttacks.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
+    <ClCompile Include="CameraEnterExit.cpp" />
+    <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="PlayerAttacks.cpp" />
+    <ClCompile Include="PlayerTest.cpp" />
+    <ClCompile Include="ReverbZone.cpp" />
+    <ClCompile Include="PlayerController.cpp" />
+    <ClCompile Include="Macros\dllmain.cpp" />
+    <ClCompile Include="TriggerCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Macros\AlienScripts.h">
-      <Filter>Macros</Filter>
-    </ClInclude>
-    <ClInclude Include="ReverbZone.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerController.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraMovement.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerTest.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerCamera.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraEnterExit.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerControllerTest.h">
-          <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClInclude Include="PlayerAttacks.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="Macros">
-      <UniqueIdentifier>{c382f096-597d-453a-8b6b-a3f46765afe4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts">
-      <UniqueIdentifier>{660e17ce-2af9-4302-ae99-52b790ddf904}</UniqueIdentifier>
-    </Filter>
+    <ClInclude Include="CameraEnterExit.h" />
+    <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="PlayerAttacks.h" />
+    <ClInclude Include="PlayerTest.h" />
+    <ClInclude Include="ReverbZone.h" />
+    <ClInclude Include="PlayerController.h" />
+    <ClInclude Include="Macros\AlienScripts.h" />
+    <ClInclude Include="TriggerCamera.h" />
   </ItemGroup>
 </Project>
