SwitchEnvironment and Footsteps scripts added

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -179,6 +179,8 @@
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="TriggerCamera.h" />
+    <ClInclude Include="TriggerEnvironment.h" />
+    <ClInclude Include="TriggerFootsteps.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CameraEnterExit.cpp" />
@@ -189,6 +191,8 @@
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="TriggerCamera.cpp" />
+    <ClCompile Include="TriggerEnvironment.cpp" />
+    <ClCompile Include="TriggerFootsteps.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
