--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -9,6 +9,8 @@
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="TriggerCamera.cpp" />
+    <ClCompile Include="TriggerEnvironment.cpp" />
+    <ClCompile Include="TriggerFootsteps.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h" />
@@ -19,5 +21,7 @@
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="TriggerCamera.h" />
+    <ClInclude Include="TriggerEnvironment.h" />
+    <ClInclude Include="TriggerFootsteps.h" />
   </ItemGroup>
 </Project>
