PlayAudioEvent script added

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -11,6 +11,7 @@
     <ClCompile Include="TriggerCamera.cpp" />
     <ClCompile Include="TriggerEnvironment.cpp" />
     <ClCompile Include="TriggerFootsteps.cpp" />
+    <ClCompile Include="TriggerAudioEvent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h" />
@@ -23,5 +24,6 @@
     <ClInclude Include="TriggerCamera.h" />
     <ClInclude Include="TriggerEnvironment.h" />
     <ClInclude Include="TriggerFootsteps.h" />
+    <ClInclude Include="TriggerAudioEvent.h" />
   </ItemGroup>
 </Project>
