--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -1,29 +1,78 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CameraEnterExit.cpp" />
-    <ClCompile Include="CameraMovement.cpp" />
-    <ClCompile Include="PlayerAttacks.cpp" />
-    <ClCompile Include="PlayerTest.cpp" />
-    <ClCompile Include="ReverbZone.cpp" />
-    <ClCompile Include="PlayerController.cpp" />
-    <ClCompile Include="Macros\dllmain.cpp" />
-    <ClCompile Include="TriggerCamera.cpp" />
-    <ClCompile Include="TriggerEnvironment.cpp" />
-    <ClCompile Include="TriggerFootsteps.cpp" />
-    <ClCompile Include="TriggerAudioEvent.cpp" />
+    <ClCompile Include="CameraEnterExit.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraMovement.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="Macros\dllmain.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerAttacks.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerController.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerTest.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="ReverbZone.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerAudioEvent.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerCamera.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerEnvironment.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerFootsteps.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CameraEnterExit.h" />
-    <ClInclude Include="CameraMovement.h" />
-    <ClInclude Include="PlayerAttacks.h" />
-    <ClInclude Include="PlayerTest.h" />
-    <ClInclude Include="ReverbZone.h" />
-    <ClInclude Include="PlayerController.h" />
-    <ClInclude Include="Macros\AlienScripts.h" />
-    <ClInclude Include="TriggerCamera.h" />
-    <ClInclude Include="TriggerEnvironment.h" />
-    <ClInclude Include="TriggerFootsteps.h" />
-    <ClInclude Include="TriggerAudioEvent.h" />
+    <ClInclude Include="Macros\AlienScripts.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraEnterExit.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraMovement.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerAttacks.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerController.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerTest.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="ReverbZone.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerAudioEvent.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerCamera.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerEnvironment.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerFootsteps.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Scripts">
+      <UniqueIdentifier>{bd278b5a-9477-442e-9d7a-7a4a396a1ec8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
