--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="UltiBar.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="Floating.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -79,6 +82,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="UltiBar.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Floating.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
