Functions added to buttons

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="Floating.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="MainMenu_Buttons.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -85,6 +88,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Floating.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="MainMenu_Buttons.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
