--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Floating.h" />
+    <ClInclude Include="MainMenu_Buttons.h" />
     <ClInclude Include="PlayerAttacks.h" />
     <ClInclude Include="PlayerTest.h" />
     <ClInclude Include="ReverbZone.h" />
@@ -190,6 +191,7 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Floating.cpp" />
+    <ClCompile Include="MainMenu_Buttons.cpp" />
     <ClCompile Include="PlayerAttacks.cpp" />
     <ClCompile Include="PlayerTest.cpp" />
     <ClCompile Include="ReverbZone.cpp" />
