Pause Menu created when click start

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Floating.h" />
+    <ClInclude Include="InGame_UI.h" />
     <ClInclude Include="MainMenu_Buttons.h" />
     <ClInclude Include="PlayerAttacks.h" />
     <ClInclude Include="PlayerTest.h" />
@@ -191,6 +192,7 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Floating.cpp" />
+    <ClCompile Include="InGame_UI.cpp" />
     <ClCompile Include="MainMenu_Buttons.cpp" />
     <ClCompile Include="PlayerAttacks.cpp" />
     <ClCompile Include="PlayerTest.cpp" />
