--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="MainMenu_Buttons.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="InGame_UI.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -91,6 +94,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="MainMenu_Buttons.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="InGame_UI.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
