class relic and effect added

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -43,6 +43,12 @@
     <ClCompile Include="Floating.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="RelicBehaviour.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="Effect.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -85,6 +91,12 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Floating.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="RelicBehaviour.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Effect.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
