--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -173,9 +173,11 @@
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="Effect.h" />
     <ClInclude Include="Floating.h" />
     <ClInclude Include="PlayerAttacks.h" />
     <ClInclude Include="PlayerTest.h" />
+    <ClInclude Include="RelicBehaviour.h" />
     <ClInclude Include="ReverbZone.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
@@ -189,9 +191,11 @@
   <ItemGroup>
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Floating.cpp" />
     <ClCompile Include="PlayerAttacks.cpp" />
     <ClCompile Include="PlayerTest.cpp" />
+    <ClCompile Include="RelicBehaviour.cpp" />
     <ClCompile Include="ReverbZone.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
