--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClCompile Include="InGame_UI.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="PauseMenu_Buttons.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -97,6 +100,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="InGame_UI.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="PauseMenu_Buttons.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
