--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="Floating.h" />
     <ClInclude Include="InGame_UI.h" />
     <ClInclude Include="MainMenu_Buttons.h" />
+    <ClInclude Include="PauseMenu_Buttons.h" />
     <ClInclude Include="PlayerAttacks.h" />
     <ClInclude Include="PlayerTest.h" />
     <ClInclude Include="ReverbZone.h" />
@@ -194,6 +195,7 @@
     <ClCompile Include="Floating.cpp" />
     <ClCompile Include="InGame_UI.cpp" />
     <ClCompile Include="MainMenu_Buttons.cpp" />
+    <ClCompile Include="PauseMenu_Buttons.cpp" />
     <ClCompile Include="PlayerAttacks.cpp" />
     <ClCompile Include="PlayerTest.cpp" />
     <ClCompile Include="ReverbZone.cpp" />
