--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -1,12 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CameraEnterExit.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraMovement.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="Macros\dllmain.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
@@ -25,9 +19,6 @@
     <ClCompile Include="TriggerAudioEvent.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="TriggerCamera.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="TriggerEnvironment.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
@@ -43,15 +34,18 @@
     <ClCompile Include="Floating.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="CameraEnterExit.cpp">
+      <Filter>Scripts\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraMovement.cpp">
+      <Filter>Scripts\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerCamera.cpp">
+      <Filter>Scripts\Camera</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraEnterExit.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraMovement.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="PlayerAttacks.h">
@@ -69,9 +63,6 @@
     <ClInclude Include="TriggerAudioEvent.h">
       <Filter>Scripts</Filter>
     </ClInclude>
-    <ClInclude Include="TriggerCamera.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="TriggerEnvironment.h">
       <Filter>Scripts</Filter>
     </ClInclude>
@@ -87,10 +78,22 @@
     <ClInclude Include="Floating.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="CameraEnterExit.h">
+      <Filter>Scripts\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraMovement.h">
+      <Filter>Scripts\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerCamera.h">
+      <Filter>Scripts\Camera</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
       <UniqueIdentifier>{ae9fbada-59b1-4468-ae23-1178230c3445}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Camera">
+      <UniqueIdentifier>{17c19f51-4545-41e6-b861-898163201ccb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
