--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -174,7 +174,9 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Effect.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Floating.h" />
+    <ClInclude Include="NilfgaardSoldier.h" />
     <ClInclude Include="PlayerAttacks.h" />
     <ClInclude Include="PlayerTest.h" />
     <ClInclude Include="RelicBehaviour.h" />
@@ -192,7 +194,9 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Effect.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Floating.cpp" />
+    <ClCompile Include="NilfgaardSoldier.cpp" />
     <ClCompile Include="PlayerAttacks.cpp" />
     <ClCompile Include="PlayerTest.cpp" />
     <ClCompile Include="RelicBehaviour.cpp" />
