--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -49,11 +49,14 @@
     <ClCompile Include="Effect.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="NilfgaardSoldier.cpp">
+      <Filter>Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Macros\AlienScripts.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="CameraEnterExit.h">
       <Filter>Scripts</Filter>
     </ClInclude>
@@ -99,10 +102,25 @@
     <ClInclude Include="Effect.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="Macros\AlienScripts.h">
+      <Filter>Macros</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="NilfgaardSoldier.h">
+      <Filter>Enemies</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
       <UniqueIdentifier>{ae9fbada-59b1-4468-ae23-1178230c3445}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Macros">
+      <UniqueIdentifier>{9b7f81b4-2f7c-4ae7-a8b8-56cf55f84fa8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Enemies">
+      <UniqueIdentifier>{cdb578f4-5d42-4d62-a038-7496e4e61695}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
