Extra menus in scenes and can be accessed from the menus

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -50,12 +50,15 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="PauseMenu_Buttons.cpp">
-    <Filter>Scripts</Filter>
+      <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="RelicBehaviour.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Effect.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="Extra_Menus.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
   </ItemGroup>
@@ -109,12 +112,15 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="PauseMenu_Buttons.h">
-    <Filter>Scripts</Filter>
+      <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="RelicBehaviour.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Effect.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Extra_Menus.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
