--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Effect.h" />
+    <ClInclude Include="Extra_Menus.h" />
     <ClInclude Include="Floating.h" />
     <ClInclude Include="InGame_UI.h" />
     <ClInclude Include="MainMenu_Buttons.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Effect.cpp" />
+    <ClCompile Include="Extra_Menus.cpp" />
     <ClCompile Include="Floating.cpp" />
     <ClCompile Include="InGame_UI.cpp" />
     <ClCompile Include="MainMenu_Buttons.cpp" />
