--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Effect.h" />
+    <ClInclude Include="EffectsFunctions.h" />
     <ClInclude Include="Floating.h" />
     <ClInclude Include="PlayerAttacks.h" />
     <ClInclude Include="PlayerTest.h" />
