--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="Effect.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="EffectsFunctions.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
