--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="UI_Char_Frame.h" />
+    <ClInclude Include="UI_EndMenu.h" />
     <ClInclude Include="UltiBar.h" />
     <ClInclude Include="TriggerAudioEvent.h" />
     <ClInclude Include="TriggerCamera.h" />
@@ -208,6 +209,7 @@
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
+    <ClCompile Include="UI_EndMenu.cpp" />
     <ClCompile Include="UltiBar.cpp" />
     <ClCompile Include="TriggerAudioEvent.cpp" />
     <ClCompile Include="TriggerCamera.cpp" />
