--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="Extra_Menus.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="UI_EndMenu.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -121,6 +124,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Extra_Menus.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="UI_EndMenu.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
