--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="NilfgaardSoldier.cpp">
       <Filter>Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyManager.cpp">
+      <Filter>Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -109,6 +112,9 @@
       <Filter>Enemies</Filter>
     </ClInclude>
     <ClInclude Include="NilfgaardSoldier.h">
+      <Filter>Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyManager.h">
       <Filter>Enemies</Filter>
     </ClInclude>
   </ItemGroup>
