--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -10,12 +10,6 @@
     <ClCompile Include="Macros\dllmain.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="PlayerAttacks.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerController.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="PlayerTest.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
@@ -58,18 +52,18 @@
     <ClCompile Include="EnemyManager.cpp">
       <Filter>Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerAttacks.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerController.cpp">
+      <Filter>Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="CameraMovement.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerAttacks.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerController.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="PlayerTest.h">
@@ -120,6 +114,12 @@
     <ClInclude Include="EffectsFunctions.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerAttacks.h">
+      <Filter>Player</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerController.h">
+      <Filter>Player</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -130,6 +130,9 @@
     </Filter>
     <Filter Include="Enemies">
       <UniqueIdentifier>{cdb578f4-5d42-4d62-a038-7496e4e61695}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Player">
+      <UniqueIdentifier>{2ab86f52-411d-486b-9fb2-52349eee8f3f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
