relic added but cant prove it without playercontroller collider

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -185,6 +185,7 @@
     <ClInclude Include="ReverbZone.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
+    <ClInclude Include="Stat.h" />
     <ClInclude Include="UI_Char_Frame.h" />
     <ClInclude Include="UltiBar.h" />
     <ClInclude Include="TriggerAudioEvent.h" />
@@ -206,6 +207,7 @@
     <ClCompile Include="ReverbZone.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
+    <ClCompile Include="Stat.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
     <ClCompile Include="UltiBar.cpp" />
     <ClCompile Include="TriggerAudioEvent.cpp" />
