--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="PlayerController.cpp">
       <Filter>Player</Filter>
     </ClCompile>
+    <ClCompile Include="Stat.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -119,6 +122,9 @@
     </ClInclude>
     <ClInclude Include="PlayerController.h">
       <Filter>Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Stat.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
