Working on enemies

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="EnemyManager.cpp">
       <Filter>Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="ArrowMovement.cpp">
+      <Filter>Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -119,6 +122,9 @@
     </ClInclude>
     <ClInclude Include="EffectsFunctions.h">
       <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrowMovement.h">
+      <Filter>Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
