--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -172,6 +172,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h" />
+    <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="EffectsFunctions.h" />
@@ -191,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CameraEnterExit.cpp" />
+    <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Floating.cpp" />
