--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -1,112 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Macros\dllmain.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerAttacks.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerController.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerTest.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="ReverbZone.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerAudioEvent.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerEnvironment.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerFootsteps.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="UI_Char_Frame.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="UltiBar.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Floating.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraEnterExit.cpp">
-      <Filter>Scripts\Camera</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraMovement.cpp">
-      <Filter>Scripts\Camera</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerCamera.cpp">
-      <Filter>Scripts\Camera</Filter>
-    <ClCompile Include="RelicBehaviour.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Effect.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
+    <ClCompile Include="CameraEnterExit.cpp" />
+    <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="Effect.cpp" />
+    <ClCompile Include="Floating.cpp" />
+    <ClCompile Include="PlayerAttacks.cpp" />
+    <ClCompile Include="PlayerTest.cpp" />
+    <ClCompile Include="RelicBehaviour.cpp" />
+    <ClCompile Include="ReverbZone.cpp" />
+    <ClCompile Include="PlayerController.cpp" />
+    <ClCompile Include="Macros\dllmain.cpp" />
+    <ClCompile Include="UI_Char_Frame.cpp" />
+    <ClCompile Include="UltiBar.cpp" />
+    <ClCompile Include="TriggerAudioEvent.cpp" />
+    <ClCompile Include="TriggerCamera.cpp" />
+    <ClCompile Include="TriggerEnvironment.cpp" />
+    <ClCompile Include="TriggerFootsteps.cpp" />
+    <ClCompile Include="CameraLimits.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Macros\AlienScripts.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerAttacks.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerController.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerTest.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="ReverbZone.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerAudioEvent.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerEnvironment.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerFootsteps.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="UI_Char_Frame.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="UltiBar.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Floating.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraEnterExit.h">
-      <Filter>Scripts\Camera</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraMovement.h">
-      <Filter>Scripts\Camera</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerCamera.h">
-      <Filter>Scripts\Camera</Filter>
-    <ClInclude Include="RelicBehaviour.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Effect.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="EffectsFunctions.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="Scripts">
-      <UniqueIdentifier>{ae9fbada-59b1-4468-ae23-1178230c3445}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Camera">
-      <UniqueIdentifier>{17c19f51-4545-41e6-b861-898163201ccb}</UniqueIdentifier>
-    </Filter>
+    <ClInclude Include="CameraEnterExit.h" />
+    <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="Effect.h" />
+    <ClInclude Include="EffectsFunctions.h" />
+    <ClInclude Include="Floating.h" />
+    <ClInclude Include="PlayerAttacks.h" />
+    <ClInclude Include="PlayerTest.h" />
+    <ClInclude Include="RelicBehaviour.h" />
+    <ClInclude Include="ReverbZone.h" />
+    <ClInclude Include="PlayerController.h" />
+    <ClInclude Include="Macros\AlienScripts.h" />
+    <ClInclude Include="UI_Char_Frame.h" />
+    <ClInclude Include="UltiBar.h" />
+    <ClInclude Include="TriggerAudioEvent.h" />
+    <ClInclude Include="TriggerCamera.h" />
+    <ClInclude Include="TriggerEnvironment.h" />
+    <ClInclude Include="TriggerFootsteps.h" />
+    <ClInclude Include="CameraLimits.h" />
   </ItemGroup>
 </Project>
