Win Lose Menu and UI textures cleaned

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClCompile Include="UI_EndMenu.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="Win_lose_menu.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -127,9 +130,12 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="UI_EndMenu.h">
-    <Filter>Scripts</Filter>
+      <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="EffectsFunctions.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Win_lose_menu.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
