--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="TriggerCamera.h" />
     <ClInclude Include="TriggerEnvironment.h" />
     <ClInclude Include="TriggerFootsteps.h" />
+    <ClInclude Include="Win_lose_menu.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CameraEnterExit.cpp" />
@@ -216,6 +217,7 @@
     <ClCompile Include="TriggerCamera.cpp" />
     <ClCompile Include="TriggerEnvironment.cpp" />
     <ClCompile Include="TriggerFootsteps.cpp" />
+    <ClCompile Include="Win_lose_menu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
