--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="Stat.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="EventManager.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -124,6 +127,9 @@
       <Filter>Player</Filter>
     </ClInclude>
     <ClInclude Include="Stat.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="EventManager.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
