--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="EffectsFunctions.h" />
+    <ClInclude Include="EventManager.h" />
     <ClInclude Include="Floating.h" />
     <ClInclude Include="NilfgaardSoldier.h" />
     <ClInclude Include="PlayerAttacks.h" />
@@ -199,6 +200,7 @@
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyManager.cpp" />
+    <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="Floating.cpp" />
     <ClCompile Include="NilfgaardSoldier.cpp" />
     <ClCompile Include="PlayerAttacks.cpp" />
