--- a/The Witcher/Alien Engine/Alien Engine.vcxproj
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj
@@ -861,6 +861,7 @@
     <ClInclude Include="PCG\pcg_extras.hpp" />
     <ClInclude Include="PCG\pcg_random.hpp" />
     <ClInclude Include="PCG\pcg_uint128.hpp" />
+    <ClInclude Include="Physics.h" />
     <ClInclude Include="Prefab.h" />
     <ClInclude Include="RandomHelper.h" />
     <ClInclude Include="RayCreator.h" />
@@ -1226,6 +1227,7 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="ParticleSystem.cpp" />
+    <ClCompile Include="Physics.cpp" />
     <ClCompile Include="Prefab.cpp" />
     <ClCompile Include="RayCreator.cpp" />
     <ClCompile Include="ResourceAnimation.cpp" />
