--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -645,6 +645,9 @@
     <ClInclude Include="FreeImage\src\FreeImage.h">
       <Filter>Tools\FreeImage</Filter>
     </ClInclude>
+    <ClInclude Include="Physics.h">
+      <Filter>ScriptHelpers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -2611,6 +2614,9 @@
     </ClCompile>
     <ClCompile Include="Alien.cpp">
       <Filter>Components\Scripting</Filter>
+    </ClCompile>
+    <ClCompile Include="Physics.cpp">
+      <Filter>ScriptHelpers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
