Dialogue Trigger simple template

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -65,7 +65,10 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="DialogueManager.cpp">
-      <Filter>Scripts</Filter>
+      <Filter>Scripts\Dialogues</Filter>
+    </ClCompile>
+    <ClCompile Include="DialogueTriggerSimple.cpp">
+      <Filter>Scripts\Dialogues</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -136,7 +139,10 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="DialogueManager.h">
-      <Filter>Scripts</Filter>
+      <Filter>Scripts\Dialogues</Filter>
+    </ClInclude>
+    <ClInclude Include="DialogueTriggerSimple.h">
+      <Filter>Scripts\Dialogues</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +157,9 @@
     </Filter>
     <Filter Include="Player">
       <UniqueIdentifier>{2ab86f52-411d-486b-9fb2-52349eee8f3f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Dialogues">
+      <UniqueIdentifier>{74d326e8-26bc-4d13-9400-d1b383afaaf2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
