Player Getting Attackded

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -64,6 +64,7 @@
     <ClCompile Include="EventManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="CameraLimits.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -132,6 +133,7 @@
     <ClInclude Include="EventManager.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="CameraLimits.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
