Working in arrow delete, rotate and attack

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -171,6 +171,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ArrowScript.h" />
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
@@ -196,6 +197,7 @@
     <ClInclude Include="TriggerFootsteps.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ArrowScript.cpp" />
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
