--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -64,6 +64,10 @@
     <ClCompile Include="EventManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="CameraLimits.cpp" />
+    <ClCompile Include="ArrowScript.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -130,6 +134,10 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="EventManager.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraLimits.h" />
+    <ClInclude Include="ArrowScript.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
