--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -64,7 +64,7 @@
     <ClCompile Include="EventManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="CameraLimits.cpp" />
+    <ClCompile Include="CameraLimits.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="DialogueManager.cpp">
@@ -142,7 +142,7 @@
       <Filter>Scripts</Filter>
     </ClInclude>
 
-    <ClInclude Include="CameraLimits.h" />
+    <ClInclude Include="CameraLimits.h">
       <Filter>Scripts</Filter>
      </ClInclude>
     <ClInclude Include="DialogueManager.h">
