--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClCompile Include="DialogueTriggerSimple.cpp">
       <Filter>Scripts\Dialogues</Filter>
     </ClCompile>
+    <ClCompile Include="Subtitle.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraEnterExit.h">
@@ -141,15 +144,17 @@
     <ClInclude Include="EventManager.h">
       <Filter>Scripts</Filter>
     </ClInclude>
-
     <ClInclude Include="CameraLimits.h">
       <Filter>Scripts</Filter>
-     </ClInclude>
+    </ClInclude>
     <ClInclude Include="DialogueManager.h">
       <Filter>Scripts\Dialogues</Filter>
     </ClInclude>
     <ClInclude Include="DialogueTriggerSimple.h">
       <Filter>Scripts\Dialogues</Filter>
+    </ClInclude>
+    <ClInclude Include="Subtitle.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
