--- a/The Witcher/Alien Engine/Alien Engine.vcxproj
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj
@@ -889,6 +889,7 @@
     <ClInclude Include="StaticInput.h" />
     <ClInclude Include="StaticTween.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="String.h" />
     <ClInclude Include="TextEdit\TextEditor.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Timer.h" />
