--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -648,6 +648,9 @@
     <ClInclude Include="Physics.h">
       <Filter>ScriptHelpers</Filter>
     </ClInclude>
+    <ClInclude Include="String.h">
+      <Filter>Tools\OurClassHelpers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
