End Menu camera transition

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="Check_EndMenu.h" />
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="DialogueTriggerSimple.h" />
     <ClInclude Include="Effect.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="Check_EndMenu.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="DialogueTriggerSimple.cpp" />
     <ClCompile Include="Effect.cpp" />
