--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClCompile Include="TriggerFootsteps.cpp">
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
+    <ClCompile Include="Check_EndMenu.cpp">
+      <Filter>Scripts\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -193,6 +196,9 @@
     </ClInclude>
     <ClInclude Include="TriggerFootsteps.h">
       <Filter>Scripts\Triggers</Filter>
+    </ClInclude>
+    <ClInclude Include="Check_EndMenu.h">
+      <Filter>Scripts\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
