--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Check_EndMenu.h" />
+    <ClInclude Include="DebugManager.h" />
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="DialogueTriggerSimple.h" />
     <ClInclude Include="Effect.h" />
@@ -211,6 +212,7 @@
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Check_EndMenu.cpp" />
+    <ClCompile Include="DebugManager.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="DialogueTriggerSimple.cpp" />
     <ClCompile Include="Effect.cpp" />
