--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClCompile Include="Check_EndMenu.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
+    <ClCompile Include="DebugManager.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -199,6 +202,9 @@
     </ClInclude>
     <ClInclude Include="Check_EndMenu.h">
       <Filter>Scripts\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugManager.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
