--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClCompile Include="TriggerFootsteps.cpp">
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
+    <ClCompile Include="BreakableObject.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -194,6 +197,9 @@
     <ClInclude Include="TriggerFootsteps.h">
       <Filter>Scripts\Triggers</Filter>
     </ClInclude>
+    <ClInclude Include="BreakableObject.h">
+      <Filter>Scripts\Objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -219,6 +225,9 @@
     </Filter>
     <Filter Include="Scripts\Triggers">
       <UniqueIdentifier>{4b461c48-f228-448b-bd9b-d17cc95854aa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Objects">
+      <UniqueIdentifier>{c5fbad49-d2c4-4e75-89d0-8646dfde0057}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
