Dialogue checker class with one function (todo descr)
- Push to the container
- Create and add dialogues to a json

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Check_EndMenu.h" />
     <ClInclude Include="DebugManager.h" />
+    <ClInclude Include="DialogueEventChecker.h" />
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="DialogueTriggerSimple.h" />
     <ClInclude Include="Effect.h" />
@@ -213,6 +214,7 @@
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Check_EndMenu.cpp" />
     <ClCompile Include="DebugManager.cpp" />
+    <ClCompile Include="DialogueEventChecker.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="DialogueTriggerSimple.cpp" />
     <ClCompile Include="Effect.cpp" />
