--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClCompile Include="DebugManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="DialogueEventChecker.cpp">
+      <Filter>Scripts\Dialogues</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -205,6 +208,9 @@
     </ClInclude>
     <ClInclude Include="DebugManager.h">
       <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="DialogueEventChecker.h">
+      <Filter>Scripts\Dialogues</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
