explotame explotame expló

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="DialogueTriggerSimple.h" />
     <ClInclude Include="Effect.h" />
+    <ClInclude Include="ExplodeChildren.h" />
     <ClInclude Include="Extra_Menus.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyManager.h" />
@@ -218,6 +219,7 @@
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="DialogueTriggerSimple.cpp" />
     <ClCompile Include="Effect.cpp" />
+    <ClCompile Include="ExplodeChildren.cpp" />
     <ClCompile Include="Extra_Menus.cpp" />
     <ClCompile Include="Floating.cpp" />
     <ClCompile Include="InGame_UI.cpp" />
