--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClCompile Include="DebugManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="ExplodeChildren.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -211,6 +214,9 @@
     </ClInclude>
     <ClInclude Include="DebugManager.h">
       <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="ExplodeChildren.h">
+      <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
