--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -110,6 +110,9 @@
     <ClCompile Include="Audio_Button.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
+    <ClCompile Include="TriggerMusicInteractive.cpp">
+      <Filter>Scripts\Triggers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -223,6 +226,9 @@
     </ClInclude>
     <ClInclude Include="Audio_Button.h">
       <Filter>Scripts\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerMusicInteractive.h">
+      <Filter>Scripts\Triggers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
