--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
+    <ClInclude Include="TriggerMusicInteractive.h" />
     <ClInclude Include="UI_Char_Frame.h" />
     <ClInclude Include="UI_EndMenu.h" />
     <ClInclude Include="UltiBar.h" />
@@ -238,6 +239,7 @@
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
+    <ClCompile Include="TriggerMusicInteractive.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
     <ClCompile Include="UI_EndMenu.cpp" />
     <ClCompile Include="UltiBar.cpp" />
